[package]
name = "domain_types"
version = "0.1.0"
authors = ["Contact <contact@cypherlink.io>"]
edition = "2021"
readme = "README.md"
description = "ESSE domain service types."
repository = "https://github.com/cympletech/domain"
keywords = ["distributed", "p2p", "domain", "ESSE"]
license = "MIT/Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
tdn_types = { version = "0.5", default-features = false }
tdn_did = { git = "https://github.com/cypherlink/tdn_did", branch="main" }
