[package]
name = "group-chat_types"
version = "0.1.0"
authors = ["Contact <contact@cypherlink.io>"]
edition = "2021"
readme = "README.md"
description = "ESSE group chat service types."
repository = "https://github.com/cympletech/group-chat"
keywords = ["distributed", "p2p", "group chat", "ESSE"]
license = "MIT/Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
tdn_types = { version = "0.5", default-features = false }
tdn_did = { version = "0.5", default-features = false }
